Layout bugs fixed

--- a/template/css/style.css
+++ b/template/css/style.css
@@ -123,8 +123,8 @@ p {
 }
 
 .main .banner {
-  border-top-left-radius: 50px;
-  border-top-right-radius: 50px;
+  border-top-left-radius: 25px;
+  border-top-right-radius: 25px;
   position: relative;
   text-align: center;
   overflow: hidden;
@@ -246,8 +246,6 @@ body {
     border-top-left-radius: 25px;
     border-top-right-radius: 25px;
     margin: 50px auto 0;
-    border-top-left-radius: 25px;
-    border-top-right-radius: 25px;
   }
   .main-body {
     padding: 20px 50px 70px;
