--- a/template/scss/_main.scss
+++ b/template/scss/_main.scss
@@ -13,8 +13,8 @@
   }
 
   & .banner {
-    border-top-left-radius: 50px;
-    border-top-right-radius: 50px;
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
     position: relative;
     text-align: center;
     overflow: hidden;
