--- a/template/scss/_not_mobile.scss
+++ b/template/scss/_not_mobile.scss
@@ -3,8 +3,6 @@
     border-top-left-radius: 25px;
     border-top-right-radius: 25px;
     margin: 50px auto 0;
-    border-top-left-radius: 25px;
-    border-top-right-radius: 25px;
   }
 
   .main-body {
